[package]
name = "nitroglycerin"
version = "0.5.0"
edition = "2018"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
license = "MIT"
description = "High level dynamodb crate"
repository = "https://github.com/conradludgate/nitroglycerin"
readme = "../README.md"

[dependencies]
nitroglycerin_derive = { path = "../nitroglycerin_derive", version = "0.5.0" }

serde = "1.0"
rusoto_dynamodb = "0.47.0"
rusoto_core = "0.47.0"
thiserror = "1.0"
serde_json = "1.0"
bytes = "1.0"
